--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,14 @@
     		<version>3.0.0</version>
 		</dependency>
 		
+		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-core</artifactId>
+		    <version>2.10.0</version>
+		</dependency>
+		
+		
 	</dependencies>
 
 	<build>
